remove use of future java functions